tests/paczka1/small_fuzzy/52075225.err
Error in line 8: 7ix5c S370 44,4
Error in line 9: MXjAdMn S622 77,1
